added style for header

--- a/source/index.html
+++ b/source/index.html
@@ -7,98 +7,122 @@
   <title>Crafty</title>
   <meta name="description" content="JoremIpsum for Nikler Group">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800|Raleway:300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <header class="main-header">
-    <a href="#" class="main-header__logo">Crafty</a>
-    <nav class="main-header__nav main-nav">
-      <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Home</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">About</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Work</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Services</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Team</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Contact</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Blog</a></li>
-      </ul>
-      <button class="main-nav__button"></button>
-    </nav>
-    <div class="main-header__banner">
-      <!-- Вставить содержимое баннера -->
+    <div class="wrapper-wide">
+      <a href="##" class="main-header__logo">Crafty</a>
+      <nav class="main-header__nav main-nav">
+        <ul id="menu" class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active"><a href="##" class="main-nav__link">Home</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">About</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">Work</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">Services</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">Team</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">Contact</a></li>
+          <li class="main-nav__item"><a href="##" class="main-nav__link">Blog</a></li>
+        </ul>
+        <button id="toggle" class="main-nav__button">
+          <span class="main-nav__control"></span>
+        </button>
+      </nav>
+      <div class="main-header__banner banner">
+        <div id="slidr-div" class="banner__container" >
+          <article class="banner__slide article" data-slidr="one">
+            <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
+            <p class="article__text">Etiam non nunc fermentum ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leo semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet erat.</p>
+            <a href="##" class="article__link">Learn more</a>
+          </article>
+          <article class="banner__slide article" data-slidr="two">
+            <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
+            <p class="article__text">Etiam non nunc fermentum ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leoвпвы Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi explicabo ullam delectus, rem unde illum dicta est exercitationem non error tenetur laudantium sint at aspernatur voluptatum libero corporis laboriosam quaerat.semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet eratfttttttttttttttttttttttttttttttttttttttttttt.вучаоооооооооооооооооооооооооооачаааааааааааааааааааа</p>
+            <a href="##" class="article__link">Learn more</a>
+          </article>
+          <article class="banner__slide article" data-slidr="three">
+            <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
+            <p class="article__text">Etiam non nunc fermentum Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis distinctio magnam aliquam quod, ducimus culpa veritatis voluptate, consectetur repellendus reprehenderit laudantium aut tempora tempore fuga. Dignissimos numquam voluptatem aliquam quas.20ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leo semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet erat.</p>
+            <a href="##" class="article__link">Learn more</a>
+          </article>
+        </div>
+      </div>
     </div>
   </header>
   <section class="about">
-      <header class="about__header">
-        <h3 class="about__title">We're crafty</h3>
-        <p class="about__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
-      </header>
-      <div class="about__body">
-        <div class="benefit">
-          <div class="benefit__img"><i></i></div>
-          <div class="benefit__text">
-            <h4 class="benefit__title">We’re creative</h4>
-            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-          </div>
+    <header class="about__header">
+      <h3 class="about__title">We're crafty</h3>
+      <p class="about__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
+    </header>
+    <div class="about__body">
+      <div class="benefit">
+        <div class="benefit__img"><i></i></div>
+        <div class="benefit__text">
+          <h4 class="benefit__title">We’re creative</h4>
+          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
         </div>
-        <div class="benefit">
-          <div class="benefit__img"><i></i></div>
-          <div class="benefit__text">
-            <h4 class="benefit__title">We work hard</h4>
-            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-          </div>
-        </div>
-        <div class="benefit">
-          <div class="benefit__img"><i></i></div>
-          <div class="benefit__text">
-            <h4 class="benefit__title">Deliver on time</h4>
-            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-          </div>
-        </div>
-        <div class="benefit">
-          <div class="benefit__img"><i></i></div>
-          <div class="benefit__text">
-            <h4 class="benefit__title">Unlimited support</h4>
-            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-          </div>
-        </div>
-      </div><!-- about body -->
-    </section>  
-    <section class="portfolio">
-      <header class="portfolio__header">
-        <h3 class="portfolio__title">We're creative</h3>
-        <p class="portfolio__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
-      </header>
-      <div class="portfolio__body">
-        <!-- вставить анимационную галерею здесь -->
       </div>
-    </section>
-    <section class="contact">
-      <header class="contact__header">
-        <h3 class="contact__title">Get in touch</h3>
-        <p class="contact__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
-      </header>
-      <form action="#" class="contact__form request-form">
-        <input type="text" class="request-form__name" placeholder="Your name">
-        <input type="email" class="request-form__email" placeholder="Your email">
-        <input type="text" class="request-form__theme" placeholder="Subject">
-        <textarea class="request-form__message" name="" id="" cols="30" rows="10" placeholder="Your message texts"></textarea>
-        <input class="request-form__submit" type="submit" value="click to send">
-      </form>
-    </section>
-    <footer class="main-footer">
-      <div class="main-footer__copyright">
-        <small class="copyright">
+      <div class="benefit">
+        <div class="benefit__img"><i></i></div>
+        <div class="benefit__text">
+          <h4 class="benefit__title">We work hard</h4>
+          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+        </div>
+      </div>
+      <div class="benefit">
+        <div class="benefit__img"><i></i></div>
+        <div class="benefit__text">
+          <h4 class="benefit__title">Deliver on time</h4>
+          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+        </div>
+      </div>
+      <div class="benefit">
+        <div class="benefit__img"><i></i></div>
+        <div class="benefit__text">
+          <h4 class="benefit__title">Unlimited support</h4>
+          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+        </div>
+      </div>
+    </div>
+    <!-- about body -->
+  </section>
+  <section class="portfolio">
+    <header class="portfolio__header">
+      <h3 class="portfolio__title">We're creative</h3>
+      <p class="portfolio__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
+    </header>
+    <div class="portfolio__body">
+      <!-- вставить анимационную галерею здесь -->
+    </div>
+  </section>
+  <section class="contact">
+    <header class="contact__header">
+      <h3 class="contact__title">Get in touch</h3>
+      <p class="contact__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
+    </header>
+    <form action="##" class="contact__form request-form">
+      <input type="text" class="request-form__name" placeholder="Your name">
+      <input type="email" class="request-form__email" placeholder="Your email">
+      <input type="text" class="request-form__theme" placeholder="Subject">
+      <textarea class="request-form__message" name="" id="" cols="30" rows="10" placeholder="Your message texts"></textarea>
+      <input class="request-form__submit" type="submit" value="click to send">
+    </form>
+  </section>
+  <footer class="main-footer">
+    <div class="main-footer__copyright">
+      <small class="copyright">
             Copyright by <br><span>ABDULLAH NOMAN</span>
         </small>
-      </div>
-      <div class="main-footer__social social-block">
-        <a href="#" class="social-block__link"><i></i></a>
-        <a href="#" class="social-block__link"><i></i></a>
-        <a href="#" class="social-block__link"><i></i></a>
-      </div>
-    </footer>
+    </div>
+    <div class="main-footer__social social-block">
+      <a href="##" class="social-block__link"><i></i></a>
+      <a href="##" class="social-block__link"><i></i></a>
+      <a href="##" class="social-block__link"><i></i></a>
+    </div>
+  </footer>
+  <!-- <script src="js/clamp.min.js"></script>-->
+  <script src="js/slidr.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
