added about section styles

--- a/source/index.html
+++ b/source/index.html
@@ -30,19 +30,19 @@
         </button>
       </nav>
       <div class="main-header__banner banner">
-        <div id="slidr-div" class="banner__container" >
+        <div id="slidr-div" class="banner__container">
           <article class="banner__slide article" data-slidr="one">
             <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
             <p class="article__text">Etiam non nunc fermentum ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leo semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet erat.</p>
             <a href="##" class="article__link">Learn more</a>
           </article>
           <article class="banner__slide article" data-slidr="two">
-            <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
-            <p class="article__text">Etiam non nunc fermentum ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leoвпвы Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi explicabo ullam delectus, rem unde illum dicta est exercitationem non error tenetur laudantium sint at aspernatur voluptatum libero corporis laboriosam quaerat.semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet eratfttttttttttttttttttttttttttttttttttttttttttt.вучаоооооооооооооооооооооооооооачаааааааааааааааааааа</p>
+            <h2 class="article__title">Lorem ipsum  consectetur adipiscing elitiam</h2>
+            <p class="article__text">Etiam non nunc fermentum ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leoвпвы Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi explicabo ullam delectus, rem unde illum dicta est exercitationem non error tenetur laudantium sint at aspernatur voluptatum libero corporis laboriosam quaerat.semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet eratfttttttttttttttttttttttttttttttttttttttttttt.</p>
             <a href="##" class="article__link">Learn more</a>
           </article>
           <article class="banner__slide article" data-slidr="three">
-            <h2 class="article__title">Lorem ipsum dolor sit amet consectetur adipiscing elitiam</h2>
+            <h2 class="article__title">Lorem ipsum dolor sit </h2>
             <p class="article__text">Etiam non nunc fermentum Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis distinctio magnam aliquam quod, ducimus culpa veritatis voluptate, consectetur repellendus reprehenderit laudantium aut tempora tempore fuga. Dignissimos numquam voluptatem aliquam quas.20ante iaculis ultricies. Aenean posuere tincidunt elit, et egestas leo semper ut. Etiam tincidunt, ligula ac sollicitudin placerat, dolor nulla ultrices magna, eget tristique diam tellus sit amet erat.</p>
             <a href="##" class="article__link">Learn more</a>
           </article>
@@ -51,41 +51,45 @@
     </div>
   </header>
   <section class="about">
-    <header class="about__header">
-      <h3 class="about__title">We're crafty</h3>
-      <p class="about__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
-    </header>
-    <div class="about__body">
-      <div class="benefit">
-        <div class="benefit__img"><i></i></div>
-        <div class="benefit__text">
-          <h4 class="benefit__title">We’re creative</h4>
-          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-        </div>
-      </div>
-      <div class="benefit">
-        <div class="benefit__img"><i></i></div>
-        <div class="benefit__text">
-          <h4 class="benefit__title">We work hard</h4>
-          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-        </div>
-      </div>
-      <div class="benefit">
-        <div class="benefit__img"><i></i></div>
-        <div class="benefit__text">
-          <h4 class="benefit__title">Deliver on time</h4>
-          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-        </div>
-      </div>
-      <div class="benefit">
-        <div class="benefit__img"><i></i></div>
-        <div class="benefit__text">
-          <h4 class="benefit__title">Unlimited support</h4>
-          <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
-        </div>
-      </div>
+    <div class="wrapper-narrow">
+      <header class="about__header">
+        <img class="about__img" src="../images/iMac.png" alt="coolmonitor" height="256" width="855">
+        <h3 class="about__title">We'<span>re</span> crafty</h3>
+        <p class="about__subhead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas diam sapien, auctor sed blandit nec, adipiscing eget elit. Duis tempor elementum quam consequat condimentum. </p>
+      </header>
     </div>
-    <!-- about body -->
+    <div class="about__body">
+      <div class="wrapper-narrow">
+        <a href="##" class="benefit">
+          <div class="benefit__img"><i class="benefit__icon icon icon-bulb"></i></div>
+          <div class="benefit__text">
+            <h4 class="benefit__title">We’re creative</h4>
+            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+          </div>
+        </a>
+        <a href="##" class="benefit">
+          <div class="benefit__img"><i class="benefit__icon icon icon-tool"></i></div>
+          <div class="benefit__text">
+            <h4 class="benefit__title">We work hard</h4>
+            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+          </div>
+        </a>
+        <a href="##" class="benefit">
+          <div class="benefit__img"><i class="benefit__icon icon icon-aid"></i></div>
+          <div class="benefit__text">
+            <h4 class="benefit__title">Deliver on time</h4>
+            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+          </div>
+        </a>
+        <a href="##" class="benefit">
+          <div class="benefit__img"><i class="benefit__icon icon icon-doc"></i></div>
+          <div class="benefit__text">
+            <h4 class="benefit__title">Unlimited support</h4>
+            <p class="benefit__desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam.</p>
+        </div>
+        </a>
+      </div>
+      <!-- about body -->
   </section>
   <section class="portfolio">
     <header class="portfolio__header">
